kubernetesservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: alkhaled-bot
  namespace: default
spec:
  selector:
    app: alkhaled
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: health
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
